# hudhud

./: .gitignore  LICENSE  README.md
src/app/: pyproject.toml
src/app/alembic/: env.py
src/app/alembic/versions/: 03547754cd9d_add_taskprog.py  12c0db4c9dff_add_epigraph.py
src/app/app/: main.py  utils.py
src/app/app/api/: deps.py
src/app/app/api/api_v1/: api.py
src/app/app/core/: config.py
src/app/app/crud/: base.py  crud_epigraph.py
src/app/app/models/: epigraph.py  task_progress.py
src/app/app/services/: epigraph.py
src/app/app/services/epigraph/: import_service.py
src/backend/app/: .env.test  pyproject.toml  pytest.ini
src/backend/app/alembic/: env.py  script.py.mako
src/backend/app/alembic/versions/: 040824eb485d_make_some_site_fields_non_nullable.py  06bdc66f9278_add_word_and_epigraph_link.py  07f947afe329_add_taskprogress_skipped_items.py  08cbff4652e8_add_dasi_id.py  0c6badb7d447_add_position_of_word_within_epigraph_to_.py  0de0dbf3f22a_add_epigraph_embedding.py  108932aa3149_make_some_epigraph_fields_optional.py  196a2db69ca8_update_letter_measure_to_str.py  2ae8dfb68c1a_add_object.py  52660d0c6cf6_rename_last_modified.py  6e2602ffce17_add_word_classification_and_attrs_.py  6e4d138af4ab_make_dasi_idnot_null.py  6f57fe13d567_add_images.py  799902a13970_add_epigraph_fields_with_temp_optional.py  894dcca60d9d_add_object_site_dasi_published_make_.py  8ab696e0f0b5_remove_uuid_from_analytics_cache.py  8bdceddb934c_add_epigraph_dasi_published.py  8d831eabbe4c_add_epigraph_chunk.py  92baa5845a53_add_site_fields.py  aba9441d31b5_add_analyticscache.py  b32c56862f3d_fix_apparatus_typo.py  c1d4e2b7b8f9_add_pipeline_run.py  d758c954a648_update_object_required_fields.py  df5daeae14fd_init.py  e2f7a9d4c3b1_drop_taskprogress.py  e365be68862d_add_language_to_word.py  eb7410ddd16b_add_additional_object_fields.py  efb222356b4a_add_site.py  f29ab598b04b_add_additional_site_fields.py  f4f7a1c2d9e0_add_dasi_sync_state.py
src/backend/app/app/: initial_data.py  main.py  utils.py
src/backend/app/app/api/: deps.py  params.py
src/backend/app/app/core/: celery_app.py  config.py  models.py
src/backend/app/app/crud/: base.py  crud_analytics_cache.py  crud_epigraph.py  crud_epigraph_chunk.py  crud_object.py  crud_pipeline_run.py  crud_site.py  crud_task_progress.py  crud_user.py  crud_word.py
src/backend/app/app/db/: engine.py  init_db.py
src/backend/app/app/models/: __init__.py  analytics_cache.py  dasi_sync.py  epigraph.py  epigraph_chunk.py  links.py  minimal.py  object.py  pipeline_run.py  site.py  task_progress.py  word.py
src/backend/app/app/services/: ai_service.py  analytics.py  chunking_service.py  embeddings_service.py  import_service.py  opensearch_service.py  (+3 more)
src/backend/app/scripts/: sync-library-skills.sh  test.sh
src/backend/app/tests/: conftest.py
(+280 files in other folders)
