[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ayman <ayman@alsuleihi.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
sqlmodel = "^0.0.22"
email-validator = "^2.2.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.14.1"
psycopg = "^3.2.4"
tenacity = "^9.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.7.1"
python-multipart = "^0.0.20"
gunicorn = "^23.0.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
openai = "^1.82.0"
pgvector = "^0.4.1"
aiohttp = "^3.12.13"
opensearch-py = "^3.0.0"
tiktoken = "^0.11.0"
spacy = {version = "^3.8.0", python = ">=3.12,<3.14"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
ruff = "^0.14.7"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
